--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -298,7 +298,8 @@ article section{
  #dropdown { display: none; }
 
  @media (min-width: 0px) and (max-width: 642px) {
-
+   #tagcloud { display: none; }
+   #dropdown { display: block; }
  }
 
 #closeButton {
