--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -85,6 +85,7 @@ footer{
   display: inline;
   padding-left: 30px;
   padding-right: 30px;
+  font-size: 1.2em;
 }
 @media (min-width: 390px) and (max-width: 585px) {
   .mainMenu {
@@ -96,6 +97,7 @@ footer{
   .mainMenu {
     padding-left: 5px;
     padding-right: 5px;
+    font-size: 1em;
   }
 }
 #smlogos {
