--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -115,12 +115,174 @@ footer{
 /*----------------
  Index Page styles
  ----------------- */
+#col1 {
+  min-height: 480px;
+  width: 22%;
+  /* border: 1px solid black; */
+  display: inline-block;
+  margin-left: 1%;
+  margin-right: 1%;
+  vertical-align:top;
+  min-width: 100px;
+}
+#col1a {
+  position: relative;
+  overflow: hidden;
+  min-width: 100px;
+}
+#col1a img {
+  /* width: 100%; */
+  height: 100%;
+  margin-left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
+
+#col2 {
+  min-height: 600px;
+  width: 22%;
+  border: 1px solid rgb(var(--Dark));
+  display: inline-block;
+  margin-left: 1%;
+  margin-right: 1%;
+  vertical-align:top;
+  color: inherit;
+}
+#col2:hover #col2-name{ background-color: rgb(var(--Colour2)) }
+#col2-name {
+  width: 100%;
+  height: 100px;
+  position: relative;
+  margin-top: -30px;
+  margin-left: -9%;
+  background-color: rgb(var(--Colour1));
+}
+#col2-name p {
+  color: white;
+  font-size: 4em;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+}
+
+#col3 {
+  min-height: 500px;
+  width: 22%;
+  border: 1px solid rgb(var(--Dark));
+  display: inline-block;
+  margin-left: 1%;
+  margin-right: 1%;
+  vertical-align:top;
+  color: inherit;
+}
+#col3:hover #col3-name{ background-color: rgb(var(--Colour2)) }
+#col3-name {
+  min-width: 220px;
+  width: 120%;
+  height: 100px;
+  margin-left: -10%;
+  background-color: rgb(var(--Colour1));
+}
+#col3-name p {
+  color: white;
+  font-size: 4em;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+}
+#col3 .context {
+  margin-top: 50px;
+}
+
+#col4 {
+  min-height: 565px;
+  width: 22%;
+  border: 1px solid rgb(var(--Dark));
+  display: inline-block;
+  margin-left: 1%;
+  margin-right: 1%;
+  vertical-align:top;
+}
+#col4a {
+  display: block;
+  border: 1px solid rgb(var(--Light));
+  color: inherit;
+}
+#col4a:hover #col4a-name{ background-color: rgb(var(--Colour2)) }
+#col4a-name {
+  width: 80%;
+  height: 100px;
+  margin-top: -40px;
+  margin-bottom: 50px;
+  margin-left: 35%;
+  background-color: rgb(var(--Colour1));
+}
+#col4a-name p {
+  color: white;
+  font-size: 4em;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+}
+#col4b {
+  display: block;
+  border: 1px solid rgb(var(--Light));
+  color: inherit;
+}
+#col4b:hover #col4b-name{ background-color: rgb(var(--Colour2)) }
+#col4b-name {
+  min-width: 220px;
+  width: 100%;
+  height: 100px;
+  margin-left: -9%;
+  margin-top: -30px;
+  background-color: rgb(var(--Colour1));
+}
+#col4b-name p {
+  color: white;
+  font-size: 4em;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: middle;
+}
+.context {
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.5em;
+}
+#cv {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px;
+  font-size: 1.5em;
+  color: rgb(var(--Dark));
+}
+@media (min-width: 0px) and (max-width: 860px) {
+  #col1, #col2, #col3, #col4 {
+    width: 90%;
+    min-height: 400px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+  }
+  #col2-name, #col3-name, #col4a-name, #col4b-name {
+    width: 50%;
+  }
+  #col3-name {
+    margin: 0 auto;
+  }
+  #col4a-name {
+    margin-left: 55%;
+  }
+}
+
 #index-page {
   float:none; clear:both;
   margin-left:8%;
   margin-right:8%;
 }
-@media (min-width: 0px) and (max-width: 900px) {
+@media (min-width: 0px) and (max-width: 1300px) {
   #index-page {
     margin-left: 1%;
     margin-right: 1%;
@@ -149,20 +311,6 @@ h1{
 }
 article section{
   padding:0;
-}
-.fadein {
-  position: relative;
-  width: 100%;
-  max-width: 640px;
-  margin-top: 5px;
-  margin-right: 10px;
-}
-.fadein img {
-  display: block;
-  position:absolute;
-  max-width: 600px;
-  left:0;
-  top:0;
 }
 
 .left {
@@ -201,7 +349,7 @@ article section{
 #about-wrapper {
   /*border: 1px solid red;*/
   clear: both;
-  margin-top: 400px;
+  margin-top: 40px;
   overflow: hidden;
 }
 .about {
@@ -216,6 +364,9 @@ article section{
   padding-right: 10px;
   padding-top: 15px;
   color: rgb(var(--Dark));
+}
+.about li {
+  margin: 0;
 }
 .second-level-list {
   margin: 0;
@@ -247,11 +398,18 @@ article section{
 
 #three { }
 
-#four:hover { color: rgb(var(--Colour2)); }
-
-#five:hover { color: rgb(var(--Colour2)); }
-
-#six:hover { color: rgb(var(--Colour2)); }
+#four:hover {
+  color: rgb(var(--Colour2));
+  border: 1px rgb(var(--Colour2)) solid;
+}
+#five:hover {
+  color: rgb(var(--Colour2));
+  border: 1px rgb(var(--Colour2)) solid;
+}
+#six:hover {
+  color: rgb(var(--Colour2));
+  border: 1px rgb(var(--Colour2)) solid;
+}
 
 
 /* -----------------
