--- a/portfolio/css/style4.css
+++ b/portfolio/css/style4.css
@@ -1,7 +1,7 @@
 /* 09 Style 4 */
 :root {
-  --Dark: 86, 86, 86;      /* Blackboard 565656  86,86,86     */
-  --Colour2: 118, 50, 63;   /* Oxblood    76323F  118,50,63    */
-  --Colour1: 192, 159, 128;   /* Tan        C09F80  192,159,128  */
-  --Light: 215, 206, 199;     /* Grain      D7CEC7  215,206,199  */
+  --Dark: 61, 64, 72;
+  --Colour2: 165, 197, 175;
+  --Colour1: 170, 117, 112;
+  --Light: 248, 233, 213;
 }
